small adjustment in router, generate docs for swagger
